objects/BP_Country__c.object
<CustomObject><fields>
        <fullName>CID__c</fullName>
        <label>YWAM Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UofNFinancialScaleCategory__c</fullName>
        <description>A,B,C Country Category</description>
        <label>UofN Financial Scale Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>UofNRsSfIdField__c</fullName>
        <externalId>true</externalId>
        <label>UofN RS SF ID Field</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>X4kCountryCode__c</fullName>
        <label>4k Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Country</label><nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Countries</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CID__c</columns>
        <columns>UofNFinancialScaleCategory__c</columns>
        <columns>X4kCountryCode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>